{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 148,
  "lineage": "2274ece0-94a3-4967-9873-99f484f74292",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:508715918765:vpc/vpc-44183a2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-5bb5b833",
            "default_route_table_id": "rtb-a6e3fcce",
            "default_security_group_id": "sg-5e02e423",
            "dhcp_options_id": "dopt-f40d089c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-44183a2c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-a6e3fcce",
            "owner_id": "508715918765",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-092d61be465a7d32b",
            "domain": "vpc",
            "id": "eipalloc-08bfa5417cf669241",
            "instance": "i-0bd4643b624dfef96",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0f03bee3eda9b156e",
            "private_dns": "ip-172-31-28-156.eu-west-2.compute.internal",
            "private_ip": "172.31.28.156",
            "public_dns": "ec2-18-169-144-81.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.169.144.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2_instance",
            "aws_security_group.ec2_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096cb92bb3580c759",
            "arn": "arn:aws:ec2:eu-west-2:508715918765:instance/i-0bd4643b624dfef96",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd4643b624dfef96",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Dell Ubuntu 20.04",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f03bee3eda9b156e",
            "private_dns": "ip-172-31-28-156.eu-west-2.compute.internal",
            "private_ip": "172.31.28.156",
            "public_dns": "ec2-18-169-144-81.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.169.144.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0037c294b44b148d9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "EC2 home SSH HTTP"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2d6b1b57",
            "tags": {
              "Name": "terraform-ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02688333bf482b856"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:508715918765:security-group/sg-02688333bf482b856",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02688333bf482b856",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "82.0.226.196/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "82.0.226.196/32"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "EC2 home SSH HTTP",
            "name_prefix": "",
            "owner_id": "508715918765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2 home SSH HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-44183a2c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:508715918765:security-group/sg-08e8289f0ad9b503c",
            "description": "RDS (terraform-managed)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e8289f0ad9b503c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02688333bf482b856"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-rds-sg",
            "name_prefix": "",
            "owner_id": "508715918765",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-44183a2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_group",
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}